[gd_scene load_steps=2 format=3 uid="uid://rkgxacxifakn"]

[ext_resource type="Script" path="res://GameOver/GameOver.gd" id="1_4w44j"]

[node name="GameOver" type="Node2D"]
script = ExtResource("1_4w44j")

[node name="GameOverLabel" type="Label" parent="."]
offset_left = 440.0
offset_top = 240.0
offset_right = 715.0
offset_bottom = 359.0
theme_override_font_sizes/font_size = 50
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeLabel" type="Label" parent="."]
offset_left = 450.0
offset_top = 343.0
offset_right = 497.0
offset_bottom = 369.0
text = "Time: "

[node name="Time" type="Label" parent="TimeLabel"]
layout_mode = 0
offset_left = 220.0
offset_top = -1.0
offset_right = 260.0
offset_bottom = 25.0
horizontal_alignment = 2

[node name="SeedsLabel" type="Label" parent="."]
offset_left = 450.0
offset_top = 430.0
offset_right = 589.0
offset_bottom = 456.0
text = "Seeds Caught:"

[node name="SeedsCaught" type="Label" parent="SeedsLabel"]
layout_mode = 0
offset_left = 220.0
offset_top = 1.0
offset_right = 260.0
offset_bottom = 24.0
horizontal_alignment = 2

[node name="DandelionLabel" type="Label" parent="."]
offset_left = 450.0
offset_top = 400.0
offset_right = 613.0
offset_bottom = 426.0
text = "Bees Stomped:"

[node name="DandelionsKilled" type="Label" parent="DandelionLabel"]
layout_mode = 0
offset_left = 220.0
offset_right = 260.0
offset_bottom = 23.0
horizontal_alignment = 2

[node name="MonstersLabel" type="Label" parent="."]
offset_left = 450.0
offset_top = 372.0
offset_right = 575.0
offset_bottom = 398.0
text = "Dandelions Weeded:"

[node name="MonstersKilled" type="Label" parent="MonstersLabel"]
layout_mode = 0
offset_left = 220.0
offset_right = 260.0
offset_bottom = 23.0
horizontal_alignment = 2

[node name="LevelLabel" type="Label" parent="."]
offset_left = 450.0
offset_top = 462.0
offset_right = 569.0
offset_bottom = 488.0
text = "Level Reached: "

[node name="Level" type="Label" parent="LevelLabel"]
layout_mode = 0
offset_left = 220.0
offset_top = 2.0
offset_right = 260.0
offset_bottom = 25.0
horizontal_alignment = 2

[node name="Button" type="Button" parent="."]
offset_left = 505.0
offset_top = 524.0
offset_right = 677.0
offset_bottom = 555.0
text = "Return to title screen"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
